--- a/templates/select_period_cost_to_income_ratio.html
+++ b/templates/select_period_cost_to_income_ratio.html
@@ -52,8 +52,8 @@ tr:nth-child(odd) {
                 </ul>
             </div>
             <div class="changeable-content">
-                <form action="/reports/group_costs_pie_chart/" method="post">{% csrf_token %}
-                    <h1>Group costs pie chart</h1>
+                <form action="/reports/cost_to_income_ratio/" method="post">{% csrf_token %}
+                    <h1>Costs to income ratio</h1>
                     {% if error_message %}
                     <p>{{ error_message }}</p>
                     {% endif %}
