--- a/templates/get_cash_flow.html
+++ b/templates/get_cash_flow.html
@@ -119,7 +119,7 @@ text-align: center;
                     <a class="btn-plus" href="/operations/income/">+</a>
                     <a class="btn-minus" href="/operations/expense/">-</a>
                     <h1>Cash flow</h1>
-                    <h4>{{date}}</h4>
+                    <h3>From {{start_date}} To {{ end_date }}</h3>
 
 <table class="safe-table">
   <thead>
